--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_mis_torneos">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_gest_participantes"
         android:name="com.example.tfg_championship_studio.ui.gestparticipantes.GestParticipantesFragment"
         android:label="@string/menu_gest_participantes"
         tools:layout="@layout/fragment_gest_participantes" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_mis_torneos"
         android:name="com.example.tfg_championship_studio.ui.mistorneos.MisTorneosFragment"
         android:label="@string/menu_mis_torneos"
         tools:layout="@layout/fragment_mis_torneos" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_ajustes"
         android:name="com.example.tfg_championship_studio.ui.ajustes.AjustesFragment"
         android:label="@string/menu_ajustes"
         tools:layout="@layout/fragment_mis_torneos" />
