--- a/app/src/main/res/layout/item_torneo.xml
+++ b/app/src/main/res/layout/item_torneo.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_item_torneo"
     android:baselineAligned="false"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:layout_gravity="center|top"
     android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="52dp"
+        android:orientation="horizontal"
+        android:background="@color/teal_200">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,29 +36,58 @@
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="match_parent"
-                android:layout_height="15dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="5dp" />
 
             <TextView
                 android:id="@+id/item_n_players"
                 android:layout_width="match_parent"
-                android:layout_height="15dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/item_torneo_nparticipantes"/>
 
             <TextView
                 android:id="@+id/item_format"
                 android:layout_width="match_parent"
-                android:layout_height="15dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="5dp" />
 
             <TextView
                 android:id="@+id/item_model_player"
                 android:layout_width="match_parent"
-                android:layout_height="15dp"
+                android:layout_height="18dp"
                 android:layout_marginTop="5dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:text="@string/item_torneo_edit_button"
+                    android:textColor="@color/black"
+                    android:background="@color/yellow"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:text="@string/item_torneo_delete_button"
+                    android:textColor="@color/black"
+                    android:background="@color/red"/>/>
+
+            </LinearLayout>
 
 
         </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
