Primera versión funcional de la App

--- a/app/src/main/res/layout/item_torneo.xml
+++ b/app/src/main/res/layout/item_torneo.xml
@@ -19,6 +19,7 @@
             android:layout_weight="0.1">
 
             <ImageView
+                android:id="@+id/item_sport"
                 android:contentDescription="@string/item_torneo_icon_desc"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
