Botón de eliminar torneo funcional

--- a/app/src/main/res/layout/new_tournament_dialog.xml
+++ b/app/src/main/res/layout/new_tournament_dialog.xml
@@ -37,7 +37,9 @@
         android:id="@+id/et_tournament_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/new_tournament_dialog_input" />
+        android:hint="@string/new_tournament_dialog_input"
+        android:autofillHints=""
+        android:inputType="text" />
 
 
 
