--- a/app/src/main/res/layout/item_torneo.xml
+++ b/app/src/main/res/layout/item_torneo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_item_torneo"
     android:baselineAligned="false"
     android:layout_width="match_parent"
@@ -9,9 +10,11 @@
     <LinearLayout
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="52dp"
+        android:layout_marginStart="52dp"
         android:orientation="horizontal"
-        android:background="@color/teal_200">
+        android:background="@color/teal_200"
+        android:baselineAligned="false"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -65,6 +68,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_edit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -75,6 +79,7 @@
                     android:background="@color/yellow"/>
 
                 <TextView
+                    android:id="@+id/tv_delete"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -82,7 +87,7 @@
                     android:gravity="center"
                     android:text="@string/item_torneo_delete_button"
                     android:textColor="@color/black"
-                    android:background="@color/red"/>/>
+                    android:background="@color/red"/>
 
             </LinearLayout>
 
