Creación de los diseños en la pestaña de Jugadores y equipos, versión previa a la implementación de ambos recyclerview

--- a/app/src/main/res/values/options_spinner.xml
+++ b/app/src/main/res/values/options_spinner.xml
@@ -86,4 +86,36 @@
         <item>Liga_Knockout</item>
         <item>Grupos_Knockout</item>
     </string-array>
+
+    // Separación entre new_tournament_dialog y new_player_team_dialog
+
+    <string-array name="spinner_format_player_team" >
+        <item>Equipos</item>
+        <item>Individual</item>
+    </string-array>
+
+    <string-array name="spinner_n_players_player_team" >
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+    </string-array>
 </resources>
