Permite crear equipos y jugadores

--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -14,6 +14,7 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:gravity="center|left"
@@ -29,6 +30,7 @@
         android:layout_weight="0.4">
 
         <TextView
+            android:id="@+id/tv_edit"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
@@ -40,6 +42,7 @@
             android:background="@color/yellow"/>
 
         <TextView
+            android:id="@+id/tv_delete"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginEnd="10dp"
