--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -13,6 +13,7 @@
         android:layout_weight="1">
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_gravity="center"
             android:gravity="center|left"
@@ -28,6 +29,7 @@
         android:layout_weight="0.68">
 
         <TextView
+            android:id="@+id/tv_add"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp"
@@ -39,6 +41,7 @@
             android:background="@color/white"/>
 
         <TextView
+            android:id="@+id/tv_edit"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -49,6 +52,7 @@
             android:background="@color/yellow"/>
 
         <TextView
+            android:id="@+id/tv_delete"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:layout_marginEnd="10dp"
