Guardado previo a grandes cambios

--- a/app/src/main/res/layout/new_tournament_dialog.xml
+++ b/app/src/main/res/layout/new_tournament_dialog.xml
@@ -1,39 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical">
-
-<Spinner
-    android:id="@+id/spinner_sport"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:entries="@array/spinner_sport" />
+    android:orientation="vertical">
 
-<Spinner
-    android:id="@+id/spinner_n_players"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:entries="@array/spinner_n_players" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:text="@string/new_tournament_dialog_title"/>
 
-<Spinner
-    android:id="@+id/spinner_format"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:entries="@array/spinner_format" />
+    <Spinner
+        android:id="@+id/spinner_sport"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:entries="@array/spinner_sport"
+        android:spinnerStyle="@style/SpinnerTextStyle"/>
 
-<Spinner
-    android:id="@+id/spinner_bracket"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:entries="@array/spinner_bracket" />
-
-<EditText
-    android:id="@+id/et_tournament_name"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="@string/new_tournament_dialog_input"
-    android:autofillHints=""
-    android:inputType="text" />
+    <EditText
+        android:id="@+id/et_tournament_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/new_tournament_dialog_input"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:autofillHints=""
+        android:inputType="text" />
 
 </LinearLayout>
