--- a/app/src/main/res/layout/item_torneo.xml
+++ b/app/src/main/res/layout/item_torneo.xml
@@ -4,7 +4,7 @@
     android:id="@+id/ll_item_torneo"
     android:baselineAligned="false"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="90dp"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -40,57 +40,68 @@
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="match_parent"
-                android:layout_height="18dp"
+                android:layout_height="22dp"
                 android:layout_marginTop="5dp" />
 
             <TextView
-                android:id="@+id/item_n_players"
+                android:id="@+id/item_state"
                 android:layout_width="match_parent"
-                android:layout_height="18dp"
+                android:layout_height="22dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/item_torneo_nparticipantes"/>
-
-            <TextView
-                android:id="@+id/item_format"
-                android:layout_width="match_parent"
-                android:layout_height="18dp"
-                android:layout_marginTop="5dp" />
-
-            <TextView
-                android:id="@+id/item_model_player"
-                android:layout_width="match_parent"
-                android:layout_height="18dp"
-                android:layout_marginTop="5dp" />
+                android:layout_marginBottom="5dp"
+                android:text="@string/item_torneo_state"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_edit"
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:text="@string/item_torneo_edit_button"
-                    android:textColor="@color/black"
-                    android:background="@color/yellow"/>
+                    android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/tv_delete"
+                    <TextView
+                        android:id="@+id/tv_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:text="@string/item_torneo_edit_button"
+                        android:textColor="@color/black"
+                        android:background="@color/yellow"/>
+
+                    <TextView
+                        android:id="@+id/tv_config"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:text="@string/item_torneo_config_button"
+                        android:textColor="@color/black"
+                        android:background="@color/yellow"/>
+
+                </FrameLayout>
+
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:gravity="center"
-                    android:text="@string/item_torneo_delete_button"
-                    android:textColor="@color/black"
-                    android:background="@color/red"/>
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_delete"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:gravity="center"
+                        android:text="@string/item_torneo_delete_button"
+                        android:textColor="@color/black"
+                        android:background="@color/red"/>
+
+                </FrameLayout>
 
             </LinearLayout>
-
 
         </LinearLayout>
 
