--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="SpinnerTextStyle" parent="android:Widget.TextView.SpinnerItem">
+        <item name="android:textSize">18sp</item> <!-- Tamaño de texto deseado -->
+    </style>
+
+
     <style name="Theme.TFG_Championship_studio.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.TFG_Championship_studio.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
