--- a/app/src/main/res/layout/fragment_equipos.xml
+++ b/app/src/main/res/layout/fragment_equipos.xml
@@ -1,14 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Equipos">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv_participantes"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:text="@string/fragment_equipos_message" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_participantes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_weight="1" />
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/tv_add_participantes"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@color/yellow"
+            android:text="@string/fragment_equipos_btn_añadir_participante"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/tv_gen_partidos"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@color/red"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:text="@string/fragment_equipos_btn_generar_partidos"/>
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
