Botón de seleccionar ganador implementado

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFEB3B</color>
     <color name="red">#E61212</color>
+    <color name="green_OK">#09B510</color>
 
 
     <color name="green_dark">#062925</color>
